<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GraphActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:orientation="horizontal" >
    </LinearLayout>

    <TextView
        android:id="@+id/aZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/accZ"
        android:layout_alignBottom="@+id/accZ"
        android:layout_alignLeft="@+id/aY"
        android:text="@string/accelz" />

    <TextView
        android:id="@+id/accZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accY"
        android:layout_below="@+id/accY"
        android:text="@string/z_m_s_2" />

    <TextView
        android:id="@+id/laccY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/laccX"
        android:layout_below="@+id/laccX"
        android:text="@string/y_m_s_2" />

    <TextView
        android:id="@+id/laccZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/laccY"
        android:layout_below="@+id/laccY"
        android:text="@string/z_m_s_2" />

    <TextView
        android:id="@+id/laZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/laccZ"
        android:layout_alignBottom="@+id/laccZ"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/laccZ"
        android:text="@string/accelz" />

    <TextView
        android:id="@+id/laY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/laccY"
        android:layout_alignLeft="@+id/laZ"
        android:text="@string/accely" />

    <TextView
        android:id="@+id/laX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/laccX"
        android:layout_alignLeft="@+id/laY"
        android:text="@string/accelx" />

    <TextView
        android:id="@+id/gravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/gravity" />

    <CheckBox
        android:id="@+id/showFpsCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="Show FPS" />

    <TextView
        android:id="@+id/accX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gravity"
        android:layout_below="@+id/gravity"
        android:text="@string/x_m_s_2" />

    <TextView
        android:id="@+id/laccX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearacceleration"
        android:layout_below="@+id/linearacceleration"
        android:text="@string/x_m_s_2" />

    <TextView
        android:id="@+id/accY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/accX"
        android:layout_below="@+id/accX"
        android:text="@string/y_m_s_2" />

    <TextView
        android:id="@+id/rotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_toRightOf="@+id/linearacceleration"
        android:text="@string/rotation" />

    <TextView
        android:id="@+id/radX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rotation"
        android:layout_below="@+id/rotation"
        android:text="X rad/s^2" />

    <TextView
        android:id="@+id/radY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radX"
        android:layout_below="@+id/radX"
        android:text="Y rad/s^2" />

    <TextView
        android:id="@+id/radZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radY"
        android:layout_below="@+id/radY"
        android:text="Z rad/s^2" />

    <CheckBox
        android:id="@+id/hwAccelerationCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/showFpsCb"
        android:layout_alignParentRight="true"
        android:text="@string/datas" />

    <TextView
        android:id="@+id/rZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radZ"
        android:layout_margin="10dp"
        android:layout_toRightOf="@+id/radZ"
        android:text="@string/radiantz" />

    <TextView
        android:id="@+id/rX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/radX"
        android:layout_alignLeft="@id/rZ"
        android:text="@string/radiantx" />

    <TextView
        android:id="@+id/aY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/accY"
        android:layout_alignBottom="@+id/accY"
        android:layout_alignLeft="@+id/aX"
        android:text="@string/accely" />

    <TextView
        android:id="@+id/aX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gravity"
        android:layout_toRightOf="@+id/gravity"
        android:text="@string/accelx" />

    <TextView
        android:id="@+id/rY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radZ"
        android:layout_toRightOf="@+id/rotation"
        android:text="@string/radianty" />

    <TextView
        android:id="@+id/linearacceleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/l_acceleration" />

</RelativeLayout>